# esphome-impulse-cover

./: .clang-format  .flake8  .gitignore  .yamllint.yml  CHANGELOG.md  CI-CD-SUMMARY.md  CONTRIBUTING.md  GITHUB_WORKFLOW.md  LICENSE  PR-BETA1-DESCRIPTION.md  PR_SUMMARY.md  PR_TEMPLATE.md  README.md  SECURITY.md  STATUS.md  TECHNICAL.md  __init__.py  check-pr-status.sh  clean-test.yaml  create-pr.sh  create-validated-pr.sh  esphome-impulse-cover.code-workspace  example-config.yaml  fresh-test.yaml  impulse_cover.h  manifest.json  pre-commit-check.sh  pyproject.toml  quality_check.sh  requirements-dev.txt  setup_env.sh  simple-test.yaml  temp-sensors-config.yaml  test-automation.yaml  test-config.yaml  test-impulse-cover.sh  test-no-automation.yaml  test-simple.yaml  test_automerge.md  test_impulse_cover.py  (+1 more)
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-merge.yml  maintenance.yml  performance.yml  quality-check.yml  release.yml
components/impulse_cover/: __init__.py  cover.py  cover_backup.py  impulse_cover.cpp  impulse_cover.h
docs/: DEVELOPER.md  PARTIAL_OPENING.md  SAFETY_MANAGEMENT.md  TEST_SCRIPT.md
examples/: advanced-test.yaml  basic-configuration.yaml  esp8266-basic.yaml  example-config.yaml  partial-opening.yaml  partial-test.yaml  quick-start.yaml  safety-management.yaml  with-sensors.yaml
